fix: Updated the mod to 1.21.5